refactor(jpa): 优化代码结构和性能提升
- 调整.gitignore配置，移除.opencode相关临时文件，添加新的忽略规则
- 修复AuditEntityListener和相关注解类的版本号标注问题
- 优化AuditUtils中StackWalker实例的缓存机制，提升性能
- 改进BaseEntity中时间戳字段的数据库约束配置，增强数据完整性
- 重构CodeEnumType转换器的缓存机制，使用哨兵字段区分未扫描和不存在的情况
- 增强ConditionBuilder的安全说明文档，明确白名单扩展的安全限制
- 优化ConditionNode中的调用栈扫描性能，限制扫描帧数避免过度消耗
- 强化CteSpec严格模式的安全警告和弃用标识
- 改进DeleteSpec的删除条件验证逻辑，防止意外的全表删除操作
- 增强EncryptConverter的盐值文件安全处理，添加写入验证和锁竞争重试机制
- 补充EntityClassResolver的复合主键限制说明
- 优化EntityCodeGenerator的字段名校验，处理Java保留字和数字开头的情况
- 提升LambdaUtils的缓存驱逐效率，减少锁持有时间
- 调整MaskSerializer的车牌掩码逻辑，完善边界情况处理
- 优化MergeSpec的字段查找算法，从嵌套循环改为O(1)哈希查找
- 加强MergeSpec的事务管理和H2方言处理的健壮性
- 增强SqlSlowQueryInterceptor防止数据源重复包装的安全检查
- 优化MyJpaTemplate的超时参数验证和分页批处理逻辑
- 移除过时的优化报告文件，保持项目整洁